CHANGES IN FLTK 1.1.0rc7

	- Fl_PNM_Image now supports the XV/GIMP thumbnail format
	  (P7).
	- Fl_Preferences would not find groups inside the root 
	  group.
	- Small bug fixes for Fl_Chart, Fl_Scrollbar, Fl_Tabs,
	  and FLUID from Matthew Morrise.
	- Fl_Chart didn't have its own destructor, so data in
	  the chart wasn't freed.
	- Fl_Menu_Button no longer responds to focus or keyboard
	  events when box() is FL_NO_BOX.
	- FLTK convenience dialogs put the buttons in the wrong
	  order.
	- Fl_BMP_Image didn't load 4-bit BMP files properly.
	- Minor tweeks to the WIN32 DLL support.
	- Fl_Text_Display::resize() could go into an infinite
	  loop if the buffer is emptied.
	- Fl::handle() didn't pass FL_RELEASE events to the
	  grab() widget if pushed() was set (for proper menu
	  handling...)
	- DND events were being sent to the target window
	  instead of the target widget under WIN32.
	- The newest Cygwin needs the same scandir() handling as
	  HP-UX.
	- FLUID didn't register the image formats in the
	  fltk_images library, and had some other image
	  management problems.
	- Fixed one more redraw bug in Fl_Browser_ where we
	  weren't using the box function to erase empty space in
	  the list.
	- Fl_Text_Display::buffer() now calls resize() to show
	  the buffer.
	- Fl_Help_View didn't support HTML comments.
	- Fl_Help_View didn't include the extra cellpadding when
	  handling colspan attributes in cells.
	- Fl_Help_View didn't support table alignment.


CHANGES IN FLTK 1.1.0rc6

	- Documentation updates.
	- Fl::handle() didn't apply the modal tests for
	  FL_RELEASE events, which caused Fl_Tabs to allow users
	  to change tabs even when a modal window was open.
	- Fl_Browser_, Fl_Input_, Fl_Slider now use the box
	  function to erase the background.  This fixes some
	  long-standing redraw problems.
	- More snprintf/strlcpy/strlcat changes where needed.
	- Fl::get_font_name() would leak 128 bytes.
	- Eliminated most of the "shadowed" variables to avoid